# skani-mummer-train

./: Cargo.toml  README.md  anim-elgg_part_2.txt  anim-nayfach.txt  c125-elgg_part_2_skani_triangle.txt  c125_latest_test.csv  c125_latest_train.csv  c125_nayfach_skani.txt  skani_anim_to_csv.py
good_models/: 0.18635842-7-230-0.08.model  0.18665557-5-115-0.12.model  0.19134241-3-175-0.12.model  0.19861849-3-195-0.089999996.model  0.21994846-4-180-0.08.model
src/: gbdt.model  main.rs  model.rs  tree.json
v0.1.0-paper-models/: 0.19525746-3-195-0.06.model
