[package]
name = "skani_training_serialize"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gbdt = "*"
serde = "*"
serde_json = "*"

[profile.release]
panic = "abort"

[profile.dev]
#opt-level = 1
opt-level = 3

#[rust]
#debuginfo-level = 1
